--- a/yoyo-popup.css
+++ b/yoyo-popup.css
@@ -23,6 +23,7 @@
     opacity: 0;
     transition: opacity 0.25s ease-out;
     will-change: opacity;
+    font-family: Arial, sans-serif;
 }
 
 .yoyo-popup-modal.show {
