--- a/yoyo-popup.css
+++ b/yoyo-popup.css
@@ -55,6 +55,8 @@
 .yoyo-popup-body {
     padding: 20px 10px;
     text-align: center;
+    display: grid;
+    place-items: center;
 }
 
 .yoyo-popup-text {
