--- a/styles.css
+++ b/styles.css
@@ -55,7 +55,8 @@ h1 {
     border-radius: 8px;
     cursor: pointer;
     transition: background-color 0.3s, transform 0.3s;
-    margin: 50px 10px;
+    margin-right: 10px;
+    margin-bottom: 10px;
 
 }
 
